assert-struct/tests/snapshots/basic__vec_mismatch.snap
---
source: assert-struct/tests/basic.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/basic_errors/vec_mismatch.rs:19:28
   |
19 |             values: [1, 2, 4], // Wrong last element
   |                            ^ got 3
